# vocabulary

./: .gitignore  README.md  backup_db_2026-06-23.sql  db_production.sql  dependency_map.json  docker-compose.prod.yml  docker-compose.yml  features.md  landing_page_formula.md  load-test-backend.js  load-test-frontend.js  load-test.js  pentest_audit.md  prompt_planning.md  raw_safeguard_output.json  roadmap.md  security_audit.md
.github/workflows/: deploy.yml
backend/: Dockerfile  composer.json
backend/app/Enums/: SubscriptionStatus.php
backend/app/Models/: Coupon.php  Level.php  Sentence.php  SubscriptionPlan.php  Transaction.php
backend/app/Providers/: AppServiceProvider.php
backend/app/Rules/: Turnstile.php
backend/app/Services/: FacebookCapiService.php  QuizService.php  ToyyibPayService.php
backend/bootstrap/: app.php
backend/config/: toyyibpay.php
backend/database/migrations/: 2026_05_24_094723_create_languages_table.php  2026_05_24_100000_create_subscription_plans_table.php  2026_05_24_100300_create_coupon_redemptions_table.php  2026_05_24_100500_create_quiz_answers_table.php  2026_05_24_100600_create_transactions_table.php
backend/routes/: api.php
backend/tests/Feature/: QuizEngineTest.php  (+4 more)
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
laravel/: .dockerignore  .env.example  Dockerfile  www.conf
laravel/config/: services.php
laravel/routes/: api.php
nginx/: default.conf
quiz-engine/: Cargo.toml  Dockerfile
quiz-engine/src/: main.rs
scripts/: detect-mockups.mjs  load-test.js  package-lock.json  package.json
(+101 files in other folders)
